fixed syntax in header

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,3 +1,18 @@
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
+
+//Other variables
+$nav-height: 6rem;
+
+$link-color: 
+#d505ff
+;
+$background-color: #dcd5f2;
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,900;1,400&display=swap');
+
+body {
+    
+    font-weight: 400;
+}
