--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,9 @@
 @import './base/settings';
+@import './base/mixins';
 @import './base/base';
 
 
+
 @import './layout/header';
+
 @import './layout/homepage';
