--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,10 +3,15 @@ html {
 }
 
 body {
-    font-family: Helvetica, Arial, Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: $m-size;
 }
 
 .is-active {
     font-weight: bold;
+}
+.page-wrapper {
+    height: 100%;
+    width: 100%;
+    position: relative;
 }
