fixed 'active' class on responsive nav

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,11 +4,12 @@ $xl-size: 4.8rem;
 
 //Other variables
 $nav-height: 6rem;
+$fa-font-path: "../webfonts";
 
 $link-color: 
-#d505ff
-;
+#d505ff;
 $background-color: #dcd5f2;
+$color-black: #000;
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,900;1,400&display=swap');
 
