--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -11,7 +11,7 @@ nav{
     height: 6rem;
 }
 
-.nav__menu {
+nav ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -24,6 +24,21 @@ nav{
                 top: 100%;
                 right: 0;
                 flex-direction: column;
+                width: 100%;
+                z-index: 999;
+                
+                li{
+                    display: block;
+                    background-color: $background-color;
+                    width: 100%;
+                    position: relative;
+                    z-index: 100;
+                    
+                }
+                a{
+                    display: block;
+                }
+
             }
     }
     @include respond(tab-port){
@@ -59,11 +74,31 @@ nav{
 
 .navtoggle{
     display: none;
+    background-color: $background-color;
+    border: none;
+    cursor: pointer;
+    
     @include respond(tab-port){
         display: inline-block;
+        visibility: visible;
+        size: 2rem;
+        padding: 1rem;
+        left: 0;
+        top: 0;
+        
     }
     @include resize(mid){
         display: inline-block;
+        visibility: visible;
+        size: 2rem;
+        padding: 1rem;
+        left: 0;
+        top: 0;
+        
+    }
+    &__icon{
+        color: $color-black;
+        
     }
         
 }
