finished projects section

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -11,6 +11,8 @@ $link-color:
 $background-color: #dcd5f2;
 $color-black: #000;
 $color-green: #8affd4;
+$color-grey: #666666;
+$highlight-color: #8acaff;
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,900;1,400&display=swap');
 
