fixed contact react logic, added useState

--- a/src/styles/layout/_homepage.scss
+++ b/src/styles/layout/_homepage.scss
@@ -35,5 +35,10 @@
     margin: $nav-height auto;
     width: 95%;
     padding: .5rem;
+    p {
+        font-size: 1.8rem;
+        line-height: 2.2rem;
+        font-weight: 400;
+    }
         
 }
