--- a/src/styles/layout/_portfolio.scss
+++ b/src/styles/layout/_portfolio.scss
@@ -7,6 +7,10 @@
     display: flex;
     flex-direction: column;
     padding: 2rem;
+    &__heading{
+
+        padding-left: 10%;
+    }
    
     &__piece{
         display: flex;
@@ -21,7 +25,7 @@
             margin: auto;
             position: relative;
             h3 {
-                font-size: 3rem;
+                font-size: 2.5rem;
                 color: $color-black;
                 padding: 1.5rem 0;
                 text-decoration: none;
