--- a/src/styles/layout/_contact.scss
+++ b/src/styles/layout/_contact.scss
@@ -41,12 +41,12 @@
             font-size: 1.7rem;
             padding: .5rem 0;
         }
-        input[type=text], textarea{
+        input, textarea{
             transition: all 0.30s ease-in-out;
             outline: none;
             border: 1px solid #DDDDDD;
         }
-        input[type=text]:focus, textarea:focus{
+        input:focus, textarea:focus{
             box-shadow: 0 0 5px $color-green;
             border: 1px solid $color-green;
         }
