--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import '../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
 @import '../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss';
+@import '../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss';
 
 
 @import './base/settings';
@@ -11,5 +12,6 @@
 @import './layout/header';
 @import './layout/portfolio';
 @import './layout/contact';
+@import './layout/footer';
 
 @import './layout/homepage';
