--- a/src/styles/layout/_contact.scss
+++ b/src/styles/layout/_contact.scss
@@ -20,9 +20,13 @@
             margin-top: 1rem;
             margin-bottom: 1rem;
             font-size: 1.7rem;
+            font-family: 'Lato', sans-serif;
         }
         &--textarea{
             height: 20rem;
+            font-family: 'Lato', sans-serif;
+            font-size: 1.7rem;
+            line-height: 2.2rem;
         }
         &--submit{
             width: 40%;
@@ -50,9 +54,19 @@
             box-shadow: 0 0 5px $color-green;
             border: 1px solid $color-green;
         }
+        &--error{
+            padding: 0 .5rem;
+            color: $link-color;
+        }
     }
 }
 .contactcontainer{
     width: 80%;
     margin: 0 auto;
+}
+
+.contact__form--error {
+    color: $link-color;
+    padding: .5rem 0;
+    font-size: 1.4rem;
 }
