--- a/src/styles/layout/_homepage.scss
+++ b/src/styles/layout/_homepage.scss
@@ -1,3 +1,5 @@
+//skills section
+
 .logo{
     max-width: 100%;
     height: auto;
@@ -9,6 +11,10 @@
         }
         @include resize(mid){
             padding: $nav-height;
+        }
+        &--heading {
+            display: flex;
+            justify-content: flex-start;
         }
         
 
@@ -33,6 +39,13 @@
     }
     
 }
+.logo__container:first-child{
+    grid-column: 1/-1;
+    justify-self: start;
+    padding-left: 3rem;
+    
+}
+
 .logo__section{
     height: 100vh;
     @include respond(tab-port){
@@ -44,7 +57,12 @@
     display: flex;
     align-content: center;
     justify-content: center;
+    flex-direction: column;
+    
+    
 }
+
+
 
 .homepage__link {
     color: $link-color;
@@ -87,6 +105,8 @@
     }
         
 }
+
+//main section
 .homepage__picture{
     width: 50%;
     padding: 1.5rem;
@@ -104,6 +124,8 @@
         border: 1px solid $link-color;
     }
 }
+
+//animation
 
 @keyframes slide-up {
     0%{
